# mi

./: .travis.yml  Cargo.toml  Makefile  README  README.md
src/morphingidentity/: capabilities.rs  cbor_utils.rs  dtag.rs  entries.rs  envelope.rs  journal.rs  ledger.rs  lib.rs  operation.rs  rand_utils.rs  short_journal.rs  snapshot.rs  store.rs  utils.rs  validator.rs
src/test/: main.rs
tests/: main.rs
