[package]
name = "journal"
version = "0.1.0"
authors = ["raph"]

[dependencies]

# cbor = "0.3"
# rustc-serialize = "0.3"
cbor-codec    = ">= 0.7.1"

[dependencies.sodiumoxide]
version = ">= 0.0.12"
default-features = false
features = ["std"]

[lib]
name = "morphingidentity"
path = "src/morphingidentity/lib.rs"

[[bin]]
name = "main"
path = "src/test/main.rs"
