[package]
name = "journal"
version = "0.1.2"
authors = ["raph"]

[dependencies]
cbor-codec = ">= 0.7.1"

[dependencies.uuid]
version = ">= 0.6"
features = ["v4"]

[dependencies.sodiumoxide]
version = ">= 0.0.12"
default-features = false
features = ["std"]

[lib]
name = "morphingidentity"
path = "src/morphingidentity/lib.rs"

[[bin]]
name = "main"
path = "src/test/main.rs"
